--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello</h1>
+    <p>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"></a>
+        This is a <strong>mzito de</strong>
+        This is an <em>niaje msee</em> word.
+    
+  
+    </p>
+    <table></table>
+
+    
+</body>
+</html>
